Version 2.1.207
    Added unicode support to locale files (no more UTF-16 codes)
    Temporarily rolling required Java version back to 16 until 1.18 is stable and everyone can migrate to it safely

Version 2.1.206
    Fixed a memory leak involving Herbalism under specific circumstances
    Fixed a memory leak involving Rupture under specific circumstances
    Fixed a memory leak involving Dodge
    Fixed a memory leak involving Endermen and block pickups
    Fixed a memory leak from plugin conflicts when double drops get activated
    Fixed a memory leak that required a specific config.yml setup with mob health bars
    You can no longer set mob health bars to -1 in config.yml to set it to display permanently (this was problematic behavior)
    Fixed a bug preventing Action Bar messages from showing
    Fixed a bug where Alchemy XP wasn't being granted
    Lowered the default volume of level up from .75 to .3 in sounds.yml (delete sounds.yml to get this change automagically)
    Updated adventure platform dependency
    Updated to use Java 17

    NOTES:
    mcMMO will target the newest version of MC moving forward, any backwards compatibility with prior versions of Minecraft should be considered a side effect rather than intended.

Version 2.1.205
    Fixed yet another exception preventing Alchemy from working (thanks NemuruYama)
    Added some code to cleanup potential memory leaks

    NOTES:
    Sorry for the delay in this patch, I have had a terrible cold all weekend, feeling better now

Version 2.1.204
    Fixed IndexOutOfBounds exception (thanks gecko10000) (related to Alchemy)
    Added double smelt to copper ingot and netherite scrap (thanks Lyther)

Version 2.1.203
    mcMMO now requires Java 16
    mcMMO now requires the newest version of Minecraft (currently 1.17.1)
    Fixed several API breaks (mostly affected Alchemy)
    Fixed a bug relating to Shake percentages (thanks Lyther)