@@ -23,6 +23,16 @@ public class McscoreboardCommand implements TabExecutor {
             return true;
         }
 
+        if(!mcMMO.p.getGeneralConfig().getScoreboardsEnabled()) {
+            sender.sendMessage(LocaleLoader.getString("Scoreboard.Disabled"));
+            return true;
+        }
+
+        if(!ScoreboardManager.isPlayerBoardSetup(sender.getName())) {
+            sender.sendMessage(LocaleLoader.getString("Scoreboard.NotSetupYet"));
+            return true;
+        }
+
         switch (args.length) {
             case 1:
                 if (args[0].equalsIgnoreCase("clear") || args[0].equalsIgnoreCase("reset")) {
