@@ -1143,3 +1143,5 @@ Chat.Spy.Party=&6[&eSPY&6-&a{2}&6] &r{0} &b\u2192 &r{1}
 Broadcasts.LevelUpMilestone=&6(&amcMMO&6) {0}&7 has reached level &a{1}&7 in &3{2}&7!
 Broadcasts.PowerLevelUpMilestone=&6(&amcMMO&6) {0}&7 has reached a Power level of &a{1}&7!
 Scoreboard.Recovery=Attempting to recover mcMMO scoreboard...
+Scoreboard.Disabled=The mcMMO scoreboards for this server are disabled, this setting is found in mcMMO/config.yml
+Scoreboard.NotSetupYet=Your mcMMO scoreboard has not been setup yet, try again later.
